# backend/template/src/app/services/models/organization.ts
@@ -2,7 +2,6 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-import { Workspace } from '../models/workspace';
 export interface Organization {
   address?: string;
   created_at?: string;
@@ -11,5 +10,4 @@ export interface Organization {
   organizationId?: number;
   phone_number?: string;
   updated_at?: string;
-  workspace?: Workspace;
 }
